# ray_tracing

./: .gitignore  CMakeLists.txt  README.md  benchmark.txt  gmon.out  gprof2dot.py  output.ppm  ray_tracing  run.sh
include/: HitRecord.cuh  Hittable.cuh  Hittables.cuh  Material.cuh  PPMImage.cuh  RGBPixel.cuh  Ray.cuh  Renderer.cuh  Sphere.cuh  Timer.cuh  Vec3.cuh  Viewport.cuh
profiling/: make_profiling.sh
src/: HitRecord.cu  Hittable.cu  Hittable.cuh  Hittables.cu  Interval.cu  Interval.cuh  LinearCongruentialGenerator.cu  LinearCongruentialGenerator.cuh  Material.cuh  PPMImage.cu  PPMImage.cuh  RGBPixel.cu  RGBPixel.cuh  Ray.cu  Ray.cuh  Renderer.cu  Renderer.cuh  Sphere.cu  Sphere.cuh  Vec3.cu  Vec3.cuh  Viewport.cu  Viewport.cuh  main.cu
